Switch to newer Maven Scala plugin